Fized geoDetails and mapController to get the code working git push